--- a/welcome/posc1020-lecture-welcome.Rmd
+++ b/welcome/posc1020-lecture-welcome.Rmd
@@ -18,9 +18,11 @@ titlefont: "Titillium Web"
 ---
 
 ```{r setup, include=FALSE, cache=F, message=F, warning=F, results="hide"}
-knitr::opts_chunk$set(cache=TRUE)
-knitr::opts_chunk$set(fig.path='figs/')
-knitr::opts_chunk$set(cache.path='cache/')
+knitr::opts_chunk$set(cache=F,
+                      fig.path = 'figs/',
+                      cache.path='cache/',
+                      warning=F,
+                      message=F)
 
 knitr::opts_chunk$set(
                   fig.process = function(x) {
@@ -31,9 +33,10 @@ knitr::opts_chunk$set(
 ```
 
 ```{r loadstuff, include=FALSE}
-mon <- as.Date("2019-01-07")
-lastday <- as.Date("2019-04-26")
-finalexam <- as.Date("2019-05-02") # 8 a.m.
+
+mon <- as.Date("2019-08-19")
+lastday <- as.Date("2019-12-06")
+finalexam <- as.Date("2019-12-13") # 7 p.m.
 # fri <- as.Date("2016-01-08")
 
 advdate <- function(obj, adv) {
@@ -45,6 +48,47 @@ advdate <- function(obj, adv) {
  tmp <- paste("Week ",zadv,sep='',", ", tmon," - ",tfri)
  return(tmp)
 }
+
+options(scipen=999)
+library(tidyverse)
+library(stevemisc)
+library(ggpmisc)
+library(anonymizer)
+library(ggcal)
+library(stringr)
+library(kfigr)
+library(broom)
+
+mydate <- seq(mon+2, lastday, by="1 day")
+mydate <- c(mydate, finalexam)
+
+# Empty dates in which I won't be here. -----
+# Oct. 1-Oct. 6: Denmark
+# Oct. 15: Fall break
+# Nov. 25-29: Thanksgiving
+
+remove_dates <- c(as.Date("2019-08-29"),
+                  as.Date("2019-10-15"),
+                  seq(as.Date("2019-10-01"), as.Date("2019-10-06"), by = "1 day"),
+                   seq(as.Date("2019-11-25"), as.Date("2019-11-29"), by = "1 day"))
+
+mydate <- mydate[! mydate %in% remove_dates]
+
+myfills <- ifelse(format(mydate, "%w") %in% c(0,1, 3, 5,6), "Other Day" ,"Class Day")
+
+# Fill in exams
+
+exam_dates <- c(as.Date("2019-09-12"), 
+                as.Date("2019-10-10"), as.Date("2019-11-14"), finalexam)
+myfills <- ifelse(mydate %in% exam_dates, "Exam/Quiz" ,myfills)
+
+# Fill in paper due dates
+
+myfills <- ifelse(mydate %in% c(as.Date("2019-11-23")), "Paper Due (Turnitin)", myfills)
+
+give_me_days <- seq(as.Date("2019-08-01"), as.Date("2019-12-31"), by="1 day")
+give_me_days <- as.numeric(str_sub(give_me_days, start= -2))
+
 
 library(RefManageR)
 library(stevemisc)
@@ -265,9 +309,9 @@ bib["friedenetal2016wp"]
 ## Course Policy
 ### Teaching Assistant
 
-Ms. Temitope Arogundade (tarogun@g.clemson.edu) will serve as a graduate teaching assistant this semester. 
+Mr. Chikezie Isiguzo (cisiguz@g.clemson.edu) will serve as a graduate teaching assistant this semester. 
 
-- She will assist in proctoring exams and grading your short papers.
+- He will assist in proctoring exams and grading your short papers.
 
 
 ### Grading Policy
@@ -275,34 +319,42 @@ Ms. Temitope Arogundade (tarogun@g.clemson.edu) will serve as a graduate teachin
 | **Assignment** | **(Due) Date** | **Percent of Grade** |
 |:-----------|:----------:|:----------------:|
 | Attendance/Participation | | 10% |
-| Map Quiz | Jan. 31 | 10% | 
-| Midterm 1         | Feb. 21 | 20% |
-| Midterm 2 | April 11 | 20% |
-| Short Paper | April 13 | 10% |
-| Final | May 2, 8-10:30 a.m. | 30% |
+| Map Quiz | Sept. 12 | 10% | 
+| Midterm 1         | Oct. 10 | 20% |
+| Midterm 2 | Nov. 14 | 20% |
+| Short Paper | Nov. 23, *before* 9 a.m. | 10% |
+| Final | Dec. 13, 7-9:30 p.m. | 30% |
 
 Check syllabus/course website for more information about the short paper and map quiz.
 
 ### Attendance/Participation Policy
 
 ```{r attenddata, include=FALSE}
-options(scipen=999)
-Attend <- read.csv("~/Dropbox/teaching/attendance-grades-relationship.csv")
-Attend$rgrade <- round(Attend$grade, 0)
-Attend$perattend <- (Attend$attendance/Attend$max)*100
-Attend <- subset(Attend, !is.na(rgrade))
-Attend$name <- as.numeric(Attend$name)
-Attend$id <- as.numeric(Attend$id)
-Attend$term <- as.numeric(Attend$term)
-Attend$class <- as.numeric(as.factor(Attend$class))
-M1 <- lm(rgrade ~ perattend, Attend)
-M2 <- lm(rgrade ~ perattend, data=subset(Attend, perattend >= 75))
-library(broom)
+read_csv("~/Dropbox/teaching/attendance-grades-relationship.csv") %>%
+  select(name:class,-id) %>%
+  mutate(name = anonymize(name, .seed = 8675309, .algo = "crc32"),
+         class = as_factor(class),
+         term = forcats::fct_relevel(term,
+                                     "Fall 2014", "Spring 2015",
+                                     "Fall 2015", "Spring 2016",
+                                     "Fall 2016", "Spring 2017",
+                                     "Fall 2017", "Spring 2018",
+                                     "Fall 2018", "Spring 2019")) %>%
+  group_by(term, class) %>%
+  mutate(maxgrade = max(grade, na.rm=T),
+         grade = ifelse(maxgrade > 100, grade - (maxgrade-100), grade)) %>%
+  ungroup() %>%
+  mutate(perattend = (attendance/max)*100) -> Attend
+
+# library(ggpmisc)
+
+M1 <- lm(grade ~ perattend, Attend)
+M2 <- lm(grade ~ perattend, data=subset(Attend, perattend >= 75))
+my.formula <- y ~ scale(x, center=T, scale=F)
 
 M1df <- tidy(M1)
 M2df <- tidy(M2)
-library(ggplot2)
-library(kfigr)
+# library(ggplot2)
 ```
 
 Effectively mandatory: I deduct all participation points after five unexcused absences.
@@ -318,16 +370,39 @@ Be prepared to answer questions. I might assign quizzes.
 
 ```{r attendplot, eval=T, echo=F, fig.height=8.5, fig.width = 14}
 
-estdecrease <- round(M1df[2,2]*5, 3)
-estdecrease_t <- round(M1df[2, 4], 3)
+# estdecrease <- round(M1df[2,2]*5, 3)
+# estdecrease_t <- round(M1df[2, 4], 3)
+# 
+# subtitletext <- paste0("Each missed class coincides with an estimated decrease of ", estdecrease, " points in the final grade (t = ", estdecrease_t, ")")
+# 
+# ggplot(Attend, aes(x = perattend, y = grade)) + geom_point() + 
+#   labs(x="Percent Attendance in Class", y="Final Grade in Class (0-100)") +
+#                               geom_smooth(method=lm) + theme_steve_web() +
+#   labs(title = "The Relationship Between Class Attendance and Final Grades, Fall 2014-Present",
+#        subtitle = subtitletext)
 
-subtitletext <- paste0("Each missed class coincides with an estimated decrease of ", estdecrease, " points in the final grade (t = ", estdecrease_t, ")")
-
-ggplot(Attend, aes(x = perattend, y = grade)) + geom_point() + 
+Attend %>%
+  mutate(class = forcats::fct_recode(class,
+                                     "Intro to International Relations" = "1020",
+                                     "Quantitative Methods" = "3410",
+                                     "International Conflict" = "3610",
+                                     "U.S. Foreign Policy" = "3630")) %>%
+  ggplot(., aes(x = perattend, y = grade)) +
+  theme_steve() +
+  geom_point() + 
+  facet_wrap(~class) +
+  #scale_x_continuous(labels=scales::percent) +
   labs(x="Percent Attendance in Class", y="Final Grade in Class (0-100)") +
-                              geom_smooth(method=lm) + theme_steve_web() +
-  labs(title = "The Relationship Between Class Attendance and Final Grades, Fall 2014-Present",
-       subtitle = subtitletext)
+  geom_smooth(method = "lm", se=TRUE, formula = my.formula) +
+  stat_poly_eq(formula = my.formula, 
+               eq.with.lhs = "italic(hat(y))~`=`~",
+               aes(label = paste(..eq.label.., "~~~~~(",..rr.label..,")", sep = "")), 
+               geom = "label_npc", alpha = 0.33, fill="#619cff",
+               size=3,
+               parse = TRUE) +
+  labs(caption = "Data: My attendance records. Note: values are centered to the mean and coefficients communicate effect of a one percent increase in attendance.\nMultiply it by five to get a rough estimate of the effect of skipping/attending one class from the mean attendance rate.")
+
+
 ```
 
 ###
@@ -335,48 +410,20 @@ ggplot(Attend, aes(x = perattend, y = grade)) + geom_point() +
 ```{r calendar, eval=T, echo=F, fig.height=8.5, fig.width = 14}
 # library(ggplot2)
 library(ggcal)
-library(stringr)
-
-mydate <- seq(mon+2, lastday, by="1 day")
-mydate <- c(mydate, finalexam)
-
-# Empty dates in which I won't be here.
-# Nov. 6 is Fall Break
-# Nov. 8 is PSSI
-# Thanksgiving is Nov. 19-23.
-
-remove_dates <- c(seq(as.Date("2019-03-18"), as.Date("2019-03-22"), by = "1 day"),
-                  seq(as.Date("2019-03-25"), as.Date("2019-03-29"), by = "1 day"))
-
-mydate <- mydate[! mydate %in% remove_dates]
-
-myfills <- ifelse(format(mydate, "%w") %in% c(0,1, 3, 5,6), " Other Day " ," Class Day ")
-
-# Fill in exams
-
-exam_dates <- c(as.Date("2019-01-31"), as.Date("2019-02-21"), as.Date("2019-04-11"), finalexam)
-myfills <- ifelse(mydate %in% exam_dates, " Exam/Quiz " ,myfills)
-
-# Fill in paper due dates
-
-myfills <- ifelse(mydate %in% c(as.Date("2019-04-13")), " Paper Due (Turnitin) ", myfills)
-
-give_me_days <- seq(as.Date("2019-01-01"), as.Date("2019-05-31"), by="1 day")
-give_me_days <- as.numeric(str_sub(give_me_days, start= -2))
-
 ggcal(mydate, myfills) +
   theme(plot.title=element_text(face="bold"),
         plot.caption=element_text(hjust=1, size=9,
                                     margin=margin(t=10), face="italic")) +
-  scale_fill_manual(values=c(" Class Day "="steelblue", 
-                             " Other Day "="lightsteelblue",
-                             " Exam/Quiz "="lightpink2",
-                             " Paper Due (Turnitin) " = "indianred4"),
-                    breaks=c(" Class Day "," Exam/Quiz "," Paper Due (Turnitin) ")) +
+  scale_fill_manual(values=c("Class Day"="steelblue", 
+                             "Other Day"="lightsteelblue",
+                             "Exam/Quiz"="lightpink2",
+                             "Paper Due (Turnitin)" = "indianred4"),
+                    breaks=c("Class Day","Exam/Quiz","Paper Due (Turnitin)")) +
   theme(legend.position="bottom") +
 #  geom_point(shape=1, size=7) +
   geom_text(aes(label=give_me_days)) +
-  labs(caption = "Notable dates: Jan. 31 (Map Quiz), Feb. 21 (Midterm 1), March 18-22 (Spring Break), March 25-29 (No Class), April 11 (Midterm 2), April 13 (Paper Due, Turnitin), May 2 (Final Exam)")
+  labs(caption = "Notable dates: Football game (Aug. 29), DSE-ECSA Conference (Oct. 1-6), Fall Break (Oct. 15), Thanskgiving Break (Nov. 25-29)")
+
 ```
 
 
@@ -428,7 +475,7 @@ If you require the Test Proctoring Center, *schedule your midterm and final now*
 
 - *Name*: Steve Miller (as in the band)
 - *E-mail*: \textcolor{clemsonorange}{svmille@clemson.edu}
-- *Office Hours*: TR: 1:30-3:30 p.m.
+- *Office Hours*: TR: 1:00 p.m.-4:00 p.m.
 - *Office*: 230A Brackett Hall
 - *Website*: \textcolor{clemsonorange}{posc1020.svmiller.com}
 
