--- a/welcome/posc1020-lecture-welcome.Rmd
+++ b/welcome/posc1020-lecture-welcome.Rmd
@@ -34,9 +34,9 @@ knitr::opts_chunk$set(
 
 ```{r loadstuff, include=FALSE}
 
-mon <- as.Date("2019-08-19")
-lastday <- as.Date("2019-12-06")
-finalexam <- as.Date("2019-12-13") # 7 p.m.
+mon <- as.Date("2020-01-06")
+lastday <- as.Date("2020-04-24")
+finalexam <- as.Date("2020-04-30") # 8 am
 # fri <- as.Date("2016-01-08")
 
 advdate <- function(obj, adv) {
@@ -62,15 +62,9 @@ library(broom)
 mydate <- seq(mon+2, lastday, by="1 day")
 mydate <- c(mydate, finalexam)
 
-# Empty dates in which I won't be here. -----
-# Oct. 1-Oct. 6: Denmark
-# Oct. 15: Fall break
-# Nov. 25-29: Thanksgiving
 
-remove_dates <- c(as.Date("2019-08-29"),
-                  as.Date("2019-10-15"),
-                  seq(as.Date("2019-10-01"), as.Date("2019-10-06"), by = "1 day"),
-                   seq(as.Date("2019-11-25"), as.Date("2019-11-29"), by = "1 day"))
+remove_dates <- c(as.Date("2020-03-12"),
+                  seq(as.Date("2020-03-16"), as.Date("2020-03-20"), by = "1 day"))
 
 mydate <- mydate[! mydate %in% remove_dates]
 
@@ -78,16 +72,20 @@ myfills <- ifelse(format(mydate, "%w") %in% c(0,1, 3, 5,6), "Other Day" ,"Class 
 
 # Fill in exams
 
-exam_dates <- c(as.Date("2019-09-12"), 
-                as.Date("2019-10-10"), as.Date("2019-11-14"), finalexam)
+exam_dates <- c(as.Date("2020-01-30"), 
+                as.Date("2020-02-20"),
+                as.Date("2020-04-02"),
+                finalexam)
 myfills <- ifelse(mydate %in% exam_dates, "Exam/Quiz" ,myfills)
 
 # Fill in paper due dates
 
-myfills <- ifelse(mydate %in% c(as.Date("2019-11-23")), "Paper Due (Turnitin)", myfills)
+# myfills <- ifelse(mydate %in% c(as.Date("2019-11-23")), "Paper Due (Turnitin)", myfills)
 
-give_me_days <- seq(as.Date("2019-08-01"), as.Date("2019-12-31"), by="1 day")
+give_me_days <- seq(as.Date("2020-01-01"),
+                    as.Date("2020-04-30"), by="1 day")
 give_me_days <- as.numeric(str_sub(give_me_days, start= -2))
+
 
 
 library(RefManageR)
@@ -307,11 +305,11 @@ bib["friedenetal2016wp"]
 
 
 ## Course Policy
-### Teaching Assistant
+<!-- ### Teaching Assistant -->
 
-Mr. Chikezie Isiguzo (cisiguz@g.clemson.edu) will serve as a graduate teaching assistant this semester. 
+<!-- Mr. Chikezie Isiguzo (cisiguz@g.clemson.edu) will serve as a graduate teaching assistant this semester.  -->
 
-- He will assist in proctoring exams and grading your short papers.
+<!-- - He will assist in proctoring exams and grading your short papers. -->
 
 
 ### Grading Policy
@@ -319,13 +317,12 @@ Mr. Chikezie Isiguzo (cisiguz@g.clemson.edu) will serve as a graduate teaching a
 | **Assignment** | **(Due) Date** | **Percent of Grade** |
 |:-----------|:----------:|:----------------:|
 | Attendance/Participation | | 10% |
-| Map Quiz | Sept. 12 | 10% | 
-| Midterm 1         | Oct. 10 | 20% |
-| Midterm 2 | Nov. 14 | 20% |
-| Short Paper | Nov. 23, *before* 9 a.m. | 10% |
-| Final | Dec. 13, 7-9:30 p.m. | 30% |
+| Map Quiz | Jan. 30 | 10% | 
+| Midterm 1         | Feb. 20 | 20% |
+| Midterm 2 | April 2 | 25% |
+| Final | April 30, 8-10:30 a.m. | 30% |
 
-Check syllabus/course website for more information about the short paper and map quiz.
+Check syllabus for more information about the map quiz.
 
 ### Attendance/Participation Policy
 
@@ -339,7 +336,8 @@ read_csv("~/Dropbox/teaching/attendance-grades-relationship.csv") %>%
                                      "Fall 2015", "Spring 2016",
                                      "Fall 2016", "Spring 2017",
                                      "Fall 2017", "Spring 2018",
-                                     "Fall 2018", "Spring 2019")) %>%
+                                     "Fall 2018", "Spring 2019",
+                                     "Fall 2019")) %>%
   group_by(term, class) %>%
   mutate(maxgrade = max(grade, na.rm=T),
          grade = ifelse(maxgrade > 100, grade - (maxgrade-100), grade)) %>%
@@ -422,7 +420,7 @@ ggcal(mydate, myfills) +
   theme(legend.position="bottom") +
 #  geom_point(shape=1, size=7) +
   geom_text(aes(label=give_me_days)) +
-  labs(caption = "Notable dates: Football game (Aug. 29), DSE-ECSA Conference (Oct. 1-6), Fall Break (Oct. 15), Thanskgiving Break (Nov. 25-29)")
+  labs(caption = "Notable dates: Professor out of town (March 12), Spring Break (March 16-20)")
 
 ```
 
@@ -475,7 +473,7 @@ If you require the Test Proctoring Center, *schedule your midterm and final now*
 
 - *Name*: Steve Miller (as in the band)
 - *E-mail*: \textcolor{clemsonorange}{svmille@clemson.edu}
-- *Office Hours*: TR: 1:00 p.m.-4:00 p.m.
+- *Office Hours*: TR: 1:00 p.m.-2:00 p.m.
 - *Office*: 230A Brackett Hall
 - *Website*: \textcolor{clemsonorange}{posc1020.svmiller.com}
 
