--- a/terrorism/posc1020-lecture-terrorism.Rmd
+++ b/terrorism/posc1020-lecture-terrorism.Rmd
@@ -34,24 +34,23 @@ knitr::opts_chunk$set(
 knitr::opts_chunk$set(cache=TRUE)
 
 library(tidyverse)
-library(lubridate)
-library(stringr)
 library(stevemisc)
 library(scales)
-library(knitr)
-library(WDI)
-library(rvest)
 library(artyfarty)
 
 Ideo <- readxl::read_xlsx("~/Dropbox/data/gtd/globalterrorismdb_USideology_1970-2016.xlsx")
 
 # GTD16 <- readxl::read_xlsx("~/Dropbox/data/gtd/20160629-download/globalterrorismdb_0616dist.xlsx")
-GTD <- readxl::read_xlsx("~/Dropbox/data/gtd/20180730-download/globalterrorismdb_0718dist.xlsx")
-# https://webappa.cdc.gov/sasweb/ncipc/mortrate.html
-CDC8198 <- read_csv("~/Dropbox/teaching/posc1020/terrorism/cdc-suicides-1981-1998.csv") %>%
-    select(Year:Deaths) %>% filter(!is.na(Year))
-CDC9916 <- read_csv("~/Dropbox/teaching/posc1020/terrorism/cdc-suicides-1999-2016.csv") %>%
-    select(Year:Deaths) %>% filter(!is.na(Year))
+# GTD <- readxl::read_xlsx("~/Dropbox/data/gtd/20180730-download/globalterrorismdb_0718dist.xlsx")
+GTD <- readxl::read_xlsx("~/Dropbox/data/gtd/globalterrorismdb_0919dist.xlsx")
+GTD93 <- readxl::read_xlsx("~/Dropbox/data/gtd/gtd1993_0919dist.xlsx")
+
+GTD %>% filter(country_txt == "United States") %>%
+  select(country_txt, eventid:iday, nkill, nwound) %>%
+  bind_rows(., GTD93 %>% filter(country_txt == "United States")  %>%
+  select(country_txt, eventid:iday, nkill, nwound)) %>%
+  arrange(iyear, imonth, iday) -> GTDUS
+
 ```
 
 
@@ -66,11 +65,10 @@ CDC9916 <- read_csv("~/Dropbox/teaching/posc1020/terrorism/cdc-suicides-1999-201
 
 ###
 
-```{r usa-terror-incidents-1970-2017, echo=F, eval=T, message=F, error=F, warning=F, fig.width = 14, fig.height = 8.5}
+```{r usa-terror-incidents-1970-present, echo=F, eval=T, message=F, error=F, warning=F, fig.width = 14, fig.height = 8.5}
 
 
-GTD %>%
-  filter(country_txt == "United States") %>%
+GTDUS %>%
   rename(year = iyear) %>%
   mutate(nkill = ifelse(is.na(nkill), 1, nkill),
          nwound = ifelse(is.na(nwound), 1, nwound)) %>%
@@ -82,57 +80,19 @@ GTD %>%
   ungroup() %>%
   mutate(median = median(num)) %>%
   select(year, total, num) %>%
-  ggplot(.,aes(year, num)) + theme_steve_web() + geom_line(size=1.1, color="#f8766d") +
+  ggplot(.,aes(year, num)) + theme_steve_web() + 
+  geom_hline(yintercept = 42, linetype="dashed") +
+  geom_line(size=1.1, color="#f8766d") +
   geom_ribbon(aes(ymin=0, ymax=num),
               alpha=0.3, fill="#f8766d") +
-  xlab("Year") + ylab("Number of Terror Incidents") +
-  scale_x_continuous(breaks = seq(1970, 2015, by = 5)) +
-  labs(title = "There's a Median of 40 Terror Incidents in a Given Year in the United States",
+  xlab("") + ylab("Number of Terror Incidents") +
+  scale_x_continuous(breaks = seq(1970, 2020, by = 5)) +
+  labs(title = "There's a Median of About 40 Terror Incidents in a Given Year in the United States",
        subtitle = "The peak for terror incidents is the first year in the data (1970), with a reported 468 incidents. These were mostly perpetrated by left-wing radical groups like the Weathermen.",
-       caption = "Data: Global Terrorism Database")
+       caption = "Data: Global Terrorism Database. Horizontal line communicates the median number of incidents in a year in the data.")
   
 
 ```
-
-###
-
-```{r usa-terror-casualties-1970-2017, echo=F, eval=T, message=F, error=F, warning=F, fig.width = 14, fig.height = 8.5}
-GTD %>%
-  filter(country_txt == "United States") %>%
-  rename(year = iyear) %>%
-  mutate(nkill = ifelse(is.na(nkill), 1, nkill),
-         nwound = ifelse(is.na(nwound), 1, nwound)) %>%
-  group_by(year) %>%
-  summarize(nkill = sum(nkill),
-            nwound = sum(nwound),
-            total = nkill + nwound,
-            num = n()) %>%
-  ungroup() %>%
-  mutate(median = median(total)) %>%
-  select(year, total, num, median) %>%
-  ggplot(.,aes(year, total)) + theme_steve_web() + 
-  geom_line(size=1.1, color="#f8766d") +
-  geom_ribbon(aes(ymin=0, ymax=total),
-              alpha=0.3, fill="#f8766d") +
-  xlab("Year") + ylab("Number of Terror Casualties") +
-  annotate("text", x = 1984, y = 1950,
-           label = "Rajneeshee\nbioterror attack\n(1984)", family = "Open Sans", size=3) +
-  annotate("text", x = 1995, y = 2100, 
-           label = "Oklahoma City\nbombing\n(1995)", family = "Open Sans", size=3) +
-  annotate("text", x = 2001, y = 20300, 
-           label = "World Trade Center\n(2001)", 
-           family = "Open Sans", size=3) +
-  annotate("text", x = 2013, y = 1620, 
-           label = "Boston Marathon\nbombing\n(2013)", family = "Open Sans", size=3) +
-  annotate("text", x= 2017, y = 2920,
-           label = "Charlottesville,\nFt. Lauderdale,\nLas Vegas,\nNew York\n(2017)", size=3) +
-  scale_x_continuous(breaks = seq(1970, 2015, by = 5)) +
-  scale_y_continuous(labels = scales::comma) +
-  labs(title = "There Are Almost Three Dozen (Median: 34) Casualties Each Year in Terror Incidents in the United States",
-       subtitle = "There are obvious peaks with the deadliest year on record being, clearly, 2001.",
-       caption = "Data: Global Terrorism Database")
-```
-
 
 ###
 
@@ -204,36 +164,11 @@ Ideos %>%
 
 ```
 
+
 ###
 
-```{r usa-drunk-driving-terror-suicide-data-1970-2017, echo=F, eval=T, message=F, error=F, warning=F, fig.width = 14, fig.height = 8.5}
-
-
-
-# http://www.iihs.org/iihs/topics/t/general-statistics/fatalityfacts/gender#Alcohol-involvement
-# http://www.alcoholalert.com/drunk-driving-statistics.html
-
-
-read_html("http://www.alcoholalert.com/drunk-driving-statistics.html") %>%
-  html_nodes(xpath='/html/body/div[1]/div/div/div[1]/div[1]/div/article/div[2]/div[2]/div[2]/table[1]') %>%
-  html_table(fill=T) -> drunkdriv
-
-drunkdriv[[1]] %>%
-  select(1, 3) %>%
-  slice(6:nrow(.)-2) %>%
-  rename(year = X1, ddfat = X3) %>%
-  mutate(ddfat = as.numeric(gsub("\\,","", ddfat)),
-         year = as.numeric(year)) %>%
-  # https://crashstats.nhtsa.dot.gov/Api/Public/ViewPublication/812450
-  bind_rows(., tibble(year = c(2012, 2013, 2014, 2015, 2016),
-                      ddfat = c(10336, 10084, 9943, 10320, 10497))) -> drunkdriv
-
-
-bind_rows(CDC8198, CDC9916) %>%
-  rename(year = Year, suicide = Deaths) -> Suicide
-
-
-GTD %>%
+```{r usa-terror-casualties-1970-present, echo=F, eval=T, message=F, error=F, warning=F, fig.width = 14, fig.height = 8.5}
+GTDUS %>%
   filter(country_txt == "United States") %>%
   rename(year = iyear) %>%
   mutate(nkill = ifelse(is.na(nkill), 1, nkill),
@@ -241,34 +176,72 @@ GTD %>%
   group_by(year) %>%
   summarize(nkill = sum(nkill),
             nwound = sum(nwound),
-            total = nkill + nwound) %>%
-  left_join(.,drunkdriv) %>%
-  left_join(.,Suicide) %>%
+            total = nkill + nwound,
+            num = n()) %>%
+  ungroup() %>%
+  mutate(median = median(total)) %>%
+  select(year, total, num, median) %>%
+  ggplot(.,aes(year, total)) + theme_steve_web() + 
+  geom_line(size=1.1, color="#f8766d") +
+  geom_ribbon(aes(ymin=0, ymax=total),
+              alpha=0.3, fill="#f8766d") +
+  xlab("") + ylab("Number of Terror Casualties") +
+  annotate("text", x = 1984, y = 4000,
+           label = "Rajneeshee\nbioterror attack\n(1984)", family = "Open Sans", size=3) +
+  annotate("text", x = 1996, y = 4000,
+           label = "Oklahoma\nCity\nbombing\n(1995)", family = "Open Sans", size=3) +
+  annotate("text", x = 1992.5, y = 4000,
+           label = "World Trade\nCenter\nbombing\n(1993)", family = "Open Sans", size=3) +
+  annotate("text", x = 2001, y = 26500,
+           label = "World Trade Center\n(2001)",
+           family = "Open Sans", size=3) +
+  annotate("text", x = 2013, y = 3500,
+           label = "Boston Marathon\nbombing\n(2013)", family = "Open Sans", size=3) +
+  annotate("text", x= 2017, y = 5420, family="Open Sans",
+           label = "Charlottesville,\nFt. Lauderdale,\nLas Vegas,\nNew York\n(2017)",
+           size=3) +
+  scale_x_continuous(breaks = seq(1970, 2020, by = 5)) +
+  scale_y_continuous(labels = scales::comma) +
+  labs(title = "There Are Almost Three Dozen (Median: 35) Casualties Each Year in Terror Incidents in the United States",
+       subtitle = "There are obvious peaks with the deadliest year on record being, clearly, 2001.",
+       caption = "Data: Global Terrorism Database.\nNOTE: the 9/11 casualty counts look unreasonably high mostly because GTD's newer updates have up-counted casualty estimates based on newer information on who has drawn from the September 11th Victim Compensation Fund.")
+```
+
+
+
+###
+
+```{r usa-drunk-driving-terror-suicide-data-1970-present, echo=F, eval=T, message=F, error=F, warning=F, fig.width = 14, fig.height = 8.5}
+
+DST %>%
   ggplot(., aes(year, ddfat)) + theme_steve_web() +
-  geom_line(aes(y = ddfat, colour = "Drunk-driving Fatalities"), size = 1.5, linetype="dashed") + 
-  geom_line(aes(y = total, colour = "Terrorism Casualties"),  size=1.5) +
-  geom_line(aes(y = suicide, colour = "Estimated Suicides"),  size=1.5) +
-  xlab("Year") + ylab("Casualties") +
-  scale_x_continuous(breaks=seq(1970, 2015, by=5)) +
+  geom_line(aes(y = ddfat, colour = "Drunk-driving Fatalities"), size = 1.5, linetype="dashed") +
+  geom_line(aes(y = terrtotal, colour = "Terrorism Casualties"),  size=1.5) +
+  geom_line(aes(y = suicides, colour = "Estimated Suicides"),  size=1.5) +
+  xlab("") + ylab("Casualties") +
+  scale_x_continuous(breaks=seq(1970, 2020, by=5)) +
   scale_y_continuous(labels = scales::comma) +
   scale_colour_discrete(name="Category") +
   annotate("text", x = 1984, y = 4000,
            label = "Rajneeshee\nbioterror attack\n(1984)", family = "Open Sans", size=3) +
-  annotate("text", x = 1995, y = 4000, 
-           label = "Oklahoma City\nbombing\n(1995)", family = "Open Sans", size=3) +
-  annotate("text", x = 2001, y = 22000, 
-           label = "World Trade Center\n(2001)", 
+  annotate("text", x = 1996, y = 4000,
+           label = "Oklahoma\nCity\nbombing\n(1995)", family = "Open Sans", size=3) +
+  annotate("text", x = 1992, y = 4000,
+           label = "World Trade\nCenter\nbombing\n(1993)", family = "Open Sans", size=3) +
+  annotate("text", x = 2001, y = 26500,
+           label = "World Trade Center\n(2001)",
            family = "Open Sans", size=3) +
-  annotate("text", x = 2013, y = 3500, 
+  annotate("text", x = 2013, y = 3500,
            label = "Boston Marathon\nbombing\n(2013)", family = "Open Sans", size=3) +
-  annotate("text", x= 2017, y = 5420,
-           label = "Charlottesville,\nFt. Lauderdale,\nLas Vegas,\nNew York\n(2017)", 
+  annotate("text", x= 2017, y = 5420, family="Open Sans",
+           label = "Charlottesville,\nFt. Lauderdale,\nLas Vegas,\nNew York\n(2017)",
            size=3) +
   theme(legend.position = "bottom") +
   labs(caption="Data: Global Terrorism Database (Terrorism), U.S. Department of Transportation (Drunk-driving), Center for Disease Control (Suicide).
-       Note: Terrorism casualties also include the number wounded but not killed. Drunk-driving statistics include just the number killed.",
-       title="Casualties in the United States from Terrorism, Suicide, and Drunk-driving, 1970-2017",
+       Note: Terrorism casualties also include the number wounded but not killed. Drunk-driving statistics include just the number killed.\nThe 9/11 casualty counts look unreasonably high mostly because GTD's newer updates have up-counted casualty estimates based on newer information on who has drawn from the September 11th Victim Compensation Fund",
+       title="Casualties in the United States from Terrorism, Suicide, and Drunk-driving, 1970-2018",
        subtitle = "Drunk-driving and suicide are more deadly public bads but don't command public attention like terrorism.")
+
 
 
 
@@ -424,24 +397,16 @@ All have pros and none are perfect.
 
 ###
 
-```{r usa-skyjacking-data-1942-2018, echo=F, eval=T, message=F, error=F, warning=F, fig.width = 14, fig.height = 8.5}
-skyjack <- read_html("https://aviation-safety.net/statistics/period/stats.php?cat=H2")
+```{r usa-skyjacking-data-1942-present, echo=F, eval=T, message=F, error=F, warning=F, fig.width = 14, fig.height = 8.5}
 
-skyjack <- html_table(html_nodes(skyjack, "table")[[1]]) %>%
-  arrange(Year) %>%
-  rename(year = Year, skyjack = Accidents) %>%
-  select(-Casualties)
-
-write_csv(skyjack, "skyjack.csv")
-
-skyjack %>%
-  ggplot(. , aes(year, skyjack)) + theme_steve_web() +
+asn_stats %>%
+  ggplot(. , aes(year, hijack)) + theme_steve_web() +
   geom_bar(stat="identity", alpha = .8, fill="#00BFC4", color="black") +
   scale_x_continuous(breaks = seq(1940, 2020, by = 5)) +
   xlab("Year") + ylab("Number of Skyjacking Incidents") +
   ylim(0, 100) +
   labs(caption="Data: Aviation Safety Network.",
-       title="The Number of International Skyjackings, 1942-2018",
+       title="The Number of International Skyjackings, 1942-2019",
        subtitle = "Skyjackings were once a favorite tool of terror groups with a peak of 86 incidents in 1969.") +
   annotate("text", x = 1970, y = 95, 
            label = "Sky marshalls\nintroduced/\nHague Convention\n(1970)",
@@ -465,15 +430,15 @@ GTD %>%
   ggplot(.,aes(iyear, n, group=`Attack Type`, color=`Attack Type`)) + 
   geom_line(size=1.1) + theme_steve_web() +
   scale_y_continuous(breaks = seq(0, 150, by=25)) +
-  scale_x_continuous(breaks = seq(1970, 2015, by = 5)) +
+  scale_x_continuous(breaks = seq(1970, 2020, by = 5)) +
   xlab("Year") + ylab("Number of Terror Incidents in a Year") +
   labs(title = "Palestinian Terrorists Weren't Deterred by the Hague Convention. They Changed Strategies.",
        subtitle = "Rational decisions are rational but need not solve strategic situations.",
-       caption = "Data: Global Terrorism Database. Note: GTD has missing data for all of 1993.") +
-  annotate("text", x = 1970, y = 55, 
+       caption = "Data: Global Terrorism Database. Note: GTD has missing data for all of 1993. It was easier to omit 1993 for the sake of this illustration.") +
+  annotate("text", x = 1970, y = 20, 
            label = "Hague\nConvention\n(1970)",
            family = "Open Sans") +
-  annotate("text", x = 1975, y = 40,
+  annotate("text", x = 1975, y = 20,
            label = "Metal detectors\nappear\n(1973)",
            family = "Open Sans")
 ```
